<resources>
    <string name="app_name">Habito</string>
    <string name="about_app">Habit Tracker is a simple app for tracking habits and self-development that helps you manage habits, set goals and develop intelligence and productivity.
    </string>

    <string name="welcome">Welcome!</string>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_analysis">Analysis</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_change">Change</string>
    <string name="menu_delete">Delete</string>

    <!-- General dialogs -->
    <string name="hint_name_goal">Name goal</string>
    <string name="hint_days">Days</string>
    <string name="hint_description">Description</string>
    <string name="helper_text">*required</string>
    <string name="error_validate_number">days count must be 2 to 365</string>
    <string name="error_validate_description">length must not exceed 255</string>
    <string name="error_validate_name_goal">length must be 1 to 30 symbols</string>

    <!-- Fragment enter name -->
    <string name="button_continue">Continue</string>
    <string name="hint_user_name">Your name</string>

    <!-- Dialog change goal -->
    <string name="header_change_goal">Change Goal</string>
    <string name="button_update">Update</string>

    <!-- Dialog create goal -->
    <string name="header_create_goal">New Goal</string>
    <string name="button_create_goal">Create New</string>

    <!-- Dialog finish goal -->
    <string name="header_finish_goal">Finish Goal</string>
    <string name="button_prolong">Prolong</string>
    <string name="button_finish">Finish</string>

    <!-- Fragment analysis -->
    <string name="header_analysis_fragment">Habits progress</string>
    <string name="card_name_goal">Habit name:</string>
    <string name="card_description_goal">Description:</string>
    <string name="card_days_goal">Days left:</string>
    <string name="progress_bar_text"> of 7 days habit has been completed</string>

    <!-- Fragment finish habits -->
    <string name="header_finish_habits">Finish</string>

    <!-- Fragment home -->
    <string name="hello">Hello, </string>
    <string-array name="time_text">
        <item>Good Night</item>
        <item>Good Morning</item>
        <item>Good Afternoon</item>
        <item>Good Evening</item>
    </string-array>
    <string-array name="month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="overall_streak">Overall streak: </string>
    <string name="best_streak">Overall best streak: </string>
    <string-array name="days">
        <item>days</item>
        <item>days</item>
        <item>days</item>
    </string-array>
    <string name="current">Current: </string>
    <string name="best">Best: </string>
    <string-array name="chart_text">
        <item> of </item>
        <item> habits</item>
        <item>completed today!</item>
    </string-array>
    <string name="header_home_checklist">Today’s Checklist</string>

    <!-- Fragment settings -->
    <string name="header_fragment_settings">Settings</string>
    <string name="notification_header">Notification</string>
    <string name="notification_switch">Receive notifications</string>
    <string name="theme_header">Theme</string>
    <string name="theme_switch">Dark theme</string>
    <string name="about_app_header">About app</string>
    <string name="logo">Main logo image</string>
    <string name="finishBottomDescription">Button for show finished habits</string>
    <string name="returnButtonDescription">Button that return habits to the status of not completed</string>
    <string name="addIconDescription">Button for create new habit</string>
    <string name="moreButtonDescription">Button to display an additional menu of habits</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>