<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:strokeColor="?attr/colorPrimary"
        app:strokeWidth="3dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                style="@style/MyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/header_change_goal"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/NameGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:helperTextEnabled="true"
                app:errorEnabled="true"
                app:helperText="@string/helper_text"
                android:hint="@string/hint_name_goal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/NameGoalText"
                    style="@style/MyText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textShortMessage|text"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:hint="@string/hint_days"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:helperText="@string/helper_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/NumberText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="20sp"
                    style="@style/MyText"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:hint="@string/hint_description"
                app:errorEnabled="true"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/DescriptionText"
                    style="@style/MyText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textLongMessage|textMultiLine"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/ButtonCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_continue"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/button_update"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/LinearPeriod"
                app:layout_constraintStart_toStartOf="@+id/LinearPeriod"
                app:layout_constraintTop_toBottomOf="@+id/LinearPeriod" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>