<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:strokeColor="?attr/colorPrimary"
        app:strokeWidth="3dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:orientation="vertical">

                <TextView
                    style="@style/MyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/header_finish_goal"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/NameGoal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:helperTextEnabled="true"
                    android:enabled="false"
                    app:errorEnabled="true"
                    android:hint="@string/hint_name_goal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/NameGoalText"
                        style="@style/MyText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage|text"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Number"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:hint="@string/hint_days"
                    android:visibility="gone"
                    app:errorEnabled="true"
                    app:helperText="*required"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/NumberText"
                        style="@style/MyText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/ButtonContinue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_second"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/button_prolong"
                        android:textSize="12sp"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/ButtonFinish"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_continue"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/button_finish"
                        android:textSize="12sp"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/ButtonProlong"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_continue"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/button_prolong"
                        android:textSize="12sp"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>